--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "babel-plugin-styled-components": "^2.0.7",
+    "dotenv": "^16.0.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
